<resources>
    <string name="app_name">Instagram</string>
    <string name="create_new_account">Create New Account</string>
    <string name="log_in">Log In</string>
    <string name="user">User</string>
    <string name="full_name">Full name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="continue_string">Continue</string>
    <string name="next">Next</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="phone_email_or_username">Phone number, email or username</string>
    <string name="or">OR</string>
    <string name="get_help_signing_in">Get help signing in.</string>
    <string name="forgot_your_login_details">Forgot your login details?</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="feed">Feed</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="please_enter_a_valid_email">Please enter a valid email</string>
    <string name="find_your_account">Find Your Account</string>
    <string name="enter_your_instagram_info">Enter your Instagram username or the email or\nphone number linked to your account.</string>
    <string name="need_more_help">Need more help?</string>
    <string name="login_help">Login Help</string>
    <string name="empty_fields">Empty Fields</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="registration_error">Registration error, Please try again</string>
    <string name="error">Error, please try again</string>
    <string name="email_reset_password">"We have sent an email to reset your password"</string>
    <string name="user_not_found">User not found</string>
    <string name="wrong_password">Wrong Password</string>
    <string name="login_error">Log in error, please try again</string>
    <string name="camera">Camera</string>
    <string name="messages">Messages</string>
    <string name="user_photo">User photo</string>
    <string name="hi">Hi</string>
    <string name="send_image">Send image</string>
    <string name="message">Message&#8230;</string>
    <string name="send">Send</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="posts">Posts</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="followers_number">%s Followers</string>
    <string name="following_number">%s Following</string>
    <string name="zero">0</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis p</string>
    <string name="fake_website">https://www.fakewebside.com/</string>
    <string name="fake_name">Jonathan Doe</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="setting">Setting</string>
    <string name="fake_username">johndoe</string>
    <string name="cancel_edit_profile">Cancel edit profile</string>
    <string name="save_changes">Save changes</string>
    <string name="change_profile_photo">Change Profile Photo</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="website">Website</string>
    <string name="bio">Bio</string>
    <string name="direct_message">Message</string>
    <string name="direct">Direct</string>
    <string name="follow">Follow</string>
    <string name="new_message">New Message</string>
    <string name="last_message">Last message&#8230;</string>
    <string name="info">Info</string>
    <string name="gallery">Gallery</string>
    <string name="photo">Photo</string>
    <string name="new_post">New post</string>
    <string name="close">Close</string>
    <string name="flash">Flash</string>
    <string name="front_facing_camera">Front facing camera</string>
    <string name="capture_picture">Capture picture</string>
    <string name="filter">Filter</string>
    <string name="new_post_image">New post image</string>
    <string name="write_a_caption">Write a caption&#8230;</string>
    <string name="share">Share</string>
    <string name="image_post">Image post</string>
    <string name="menu">Menu</string>
    <string name="like">1 Like</string>
    <string name="likes">%s Likes</string>
    <string name="comments">Comments</string>
    <string name="view_comment">View 1 comment</string>
    <string name="view_all_comments">View all %s comments</string>
    <string name="time_ago">December 10</string>
    <string name="caption">username Caption</string>
    <string name="zero_likes">0 Likes</string>
    <string name="current_profile">Current Profile</string>
    <string name="explore">Explore</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
