<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_feed"
        android:icon="@drawable/ic_feed"
        android:title="@string/feed" />
    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search" />
    <item
        android:id="@+id/navigation_add_post"
        android:icon="@drawable/ic_add"
        android:title="@string/add" />
    <item
        android:id="@+id/navigation_notification"
        android:icon="@drawable/ic_notification"
        android:title="@string/notification" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />
</menu>