<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.meazza.instagram.ui.post.detail.PostDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.post.detail.PostDetailFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tb_post_detail"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:elevation="2dp"
            android:theme="@style/ToolbarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:titleTextAppearance="@style/ToolbarTitle" />

        <ImageView
            android:id="@+id/iv_user_photo_post"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/user_photo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tb_post_detail"
            app:setRoundImage="@{viewModel.userPhotoUrl}"
            app:srcCompat="@drawable/ic_user_photo" />

        <TextView
            android:id="@+id/tv_username_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@{viewModel.username}"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_user_photo_post"
            app:layout_constraintStart_toEndOf="@+id/iv_user_photo_post"
            app:layout_constraintTop_toTopOf="@+id/iv_user_photo_post"
            tools:text="@string/fake_username" />

        <ImageView
            android:id="@+id/iv_menu_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/menu"
            app:layout_constraintBottom_toBottomOf="@+id/tv_username_post"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_username_post"
            app:srcCompat="@drawable/ic_three_points" />

        <com.meazza.instagram.common.decoration.SquareImageView
            android:id="@+id/iv_post_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/image_post"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_user_photo_post"
            app:setSquareImage="@{viewModel.postImageUrl}"
            tools:src="@tools:sample/backgrounds/scenic[15]" />

        <ImageView
            android:id="@+id/iv_like"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/like"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_post_detail"
            app:srcCompat="@drawable/ic_heart" />

        <ImageView
            android:id="@+id/iv_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/comments"
            app:layout_constraintBottom_toBottomOf="@+id/iv_like"
            app:layout_constraintStart_toEndOf="@+id/iv_like"
            app:layout_constraintTop_toTopOf="@+id/iv_like"
            app:srcCompat="@drawable/ic_comments" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_like">

            <TextView
                android:id="@+id/tv_likes_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"
                app:setTextLikes="@{viewModel.likes}"
                tools:text="@string/zero_likes" />

            <TextView
                android:id="@+id/tv_caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"
                app:setCaption="@{viewModel.caption}"
                app:setUsername="@{viewModel.username}"
                tools:text="@string/caption" />

            <TextView
                android:id="@+id/tv_all_comments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:textColor="@color/gray_icon"
                android:textSize="14sp"
                app:setTextComments="@{viewModel.comments}"
                tools:text="@string/view_comment" />

            <TextView
                android:id="@+id/tv_time_ago"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:textColor="@color/gray_icon"
                android:textSize="10sp"
                app:setFormatDate="@{viewModel.timeAgo}"
                tools:ignore="SmallSp"
                tools:text="@string/time_ago" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>