<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.add_post.from.PhotoFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_photo"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="@color/colorPrimary"
        android:elevation="2dp"
        android:theme="@style/AppTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextAppearance="@style/ToolbarTextTitle">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_close_photo"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:contentDescription="@string/close"
                android:src="@drawable/ic_close"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/photo"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/iv_close_photo"
                app:layout_constraintStart_toEndOf="@+id/iv_close_photo"
                app:layout_constraintTop_toTopOf="@+id/iv_close_photo" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <com.meazza.instagram.common.customization.SquarePreviewView
        android:id="@+id/view_finder"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/new_post"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tb_photo" />

    <ImageView
        android:id="@+id/iv_capture"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:contentDescription="@string/capture_picture"
        android:src="@drawable/ic_capture"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_finder" />

    <ImageView
        android:id="@+id/iv_flash"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/flash"
        android:src="@drawable/ic_flash"
        app:layout_constraintBottom_toBottomOf="@+id/view_finder"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/iv_reverse"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/front_facing_camera"
        android:src="@drawable/ic_reverse"
        app:layout_constraintBottom_toBottomOf="@+id/view_finder"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>