<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="user"
            type="com.meazza.instagram.data.model.User" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_user"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:contentDescription="@string/user_photo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:setRoundImage="@{user.photoUrl}"
            app:srcCompat="@drawable/ic_user_photo" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@{user.name}"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintStart_toEndOf="@+id/iv_user"
            tools:text="@string/fake_name" />

        <TextView
            android:id="@+id/tv_last_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:textColor="@color/gray_dark"
            app:layout_constraintEnd_toEndOf="@+id/tv_user_name"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_user_name"
            app:layout_constraintTop_toTopOf="@+id/guideline2"
            tools:text="@string/last_message" />

        <ImageView
            android:id="@+id/iv_camera"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/camera"
            android:tint="@color/gray_dark"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline2"
            app:srcCompat="@drawable/ic_camera" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>